fix: add scrollbar in project and sprint highlights, milestones

--- a/style.css
+++ b/style.css
@@ -415,6 +415,13 @@ nav {
   overflow: hidden;
 }
 
+.project-hightlights-list.scrollable,
+.sprint-hightlights-list.scrollable,
+.milestones-list.scrollable {
+  overflow-y: auto;
+  height: 65px;
+}
+
 .project-hightlights-list li,
 .sprint-hightlights-list li,
 .milestones-list li {
